<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    tools:background="@color/orange">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivOnBoardingImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="96dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOnBoardingTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/onboarding_first_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOnBoardingSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOnBoardingTitle"
        tools:text="@string/onboarding_first_subtitle" />

    <Button
        android:id="@+id/btnOnBoardingGetStarted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/white"
        android:paddingVertical="8dp"
        android:text="@string/onboarding_get_started"
        android:textColor="@color/orange"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOnBoardingTitle"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>