<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.options.OptionsFragment">

    <RadioGroup
        android:id="@+id/rgPetOption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/orange"
        android:checkedButton="@id/rbtnCatOptions"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbtnCatOptions"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/onboarding_radio_button"
            android:button="@android:color/transparent"
            android:drawableTop="@drawable/cat"
            android:drawableTint="@color/onboarding_button_state"
            android:paddingVertical="18dp"
            android:text="@string/cats_title"
            android:textAlignment="center"
            android:textColor="@color/onboarding_button_state"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbtnBothOptions"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/onboarding_radio_button"
            android:button="@android:color/transparent"
            android:drawableTop="@drawable/both_pets"
            android:drawableTint="@color/onboarding_button_state"
            android:paddingVertical="18dp"
            android:text="@string/both_pets_title"
            android:textAlignment="center"
            android:textColor="@color/onboarding_button_state"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbtnDogOptions"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/onboarding_radio_button"
            android:button="@android:color/transparent"
            android:drawableTop="@drawable/dog"
            android:drawableTint="@color/onboarding_button_state"
            android:paddingVertical="18dp"
            android:text="@string/dogs_title"
            android:textAlignment="center"
            android:textColor="@color/onboarding_button_state"
            android:textStyle="bold" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>