<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_search_scene"
    tools:context=".ui.search.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchFilterLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:elevation="2dp"
        android:orientation="vertical"
        android:paddingHorizontal="8dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvFiltersTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filters_title"
            android:textColor="@color/title_color"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFilterBreed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:elevation="4dp"
            android:text="@string/breeds_list_hint"
            android:textAllCaps="false"
            android:textColor="@color/subtitle_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnFilterCategory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFiltersTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFilterCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:elevation="4dp"
            android:text="@string/categories_list_hint"
            android:textAllCaps="false"
            android:textColor="@color/subtitle_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnFilterBreed"
            app:layout_constraintTop_toTopOf="@id/btnFilterBreed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeSearch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchFilterLayout">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:padding="2dp"
                android:visibility="invisible"
                tools:visibility="visible" />

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/skSearchLoading"
                style="@style/SpinKitView.ThreeBounce"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:visibility="visible"
                app:SpinKit_Color="@color/orange" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/searchError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/ic_wifi_off"
                    app:tint="@color/red" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/ErrorDescriptionTitle"
                    android:text="@string/error_no_connection" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSearchUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:backgroundTint="@color/orange"
        app:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="40dp"
        app:shapeAppearance="@style/CircularShape"
        app:srcCompat="@drawable/ic_arrow_up"
        app:tint="@color/white"
        tools:ignore="ImageContrastCheck"
        tools:visibility="visible" />

</androidx.constraintlayout.motion.widget.MotionLayout>